[package]
name = "tm"
description = "tmux helper"
version = "0.7.2"
edition = "2021"
authors = ["Jörg Jaspert <joerg@ganneff.de>"]
license = "BSD-2-Clause"
keywords = [ "tmux", "shell", "helper", "terminal" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/Ganneff/tm"

[dependencies]
anyhow = "^1.0"
clap = { version = "^3.2.15", features = ["derive", "env", "regex", "unicode", "wrap_help"] }
clap-verbosity-flag = "^1"
directories = "^4.0"
enum_default = "0.2.5"
flexi_logger = { version = "^0.22", features = ["colors"] }
home-dir = "^0.1"
itertools = "0.10.3"
lazy_static = "^1.4"
log = "^0.4"
quit = "^1.1"
rand = "^0.8"
shlex = "1.1.0"
thiserror = "^1.0"
tmux_interface = { version = "^0.2.0", features = ["tmux_2_8", "cmd_alias"], default-features = false }

[workspace]

[dev-dependencies]
regex = "1.5"
