[package]
name = "tm"
description = "tmux helper"
version = "0.9.2"
edition = "2021"
authors = ["Jörg Jaspert <joerg@ganneff.de>"]
license = "BSD-2-Clause"
keywords = [ "tmux", "shell", "helper", "terminal" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/Ganneff/tm"

[dependencies]
anyhow = "^1.0"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap-verbosity-flag = "^2"
directories = "^5.0"
fehler = "1.0.0"
flexi_logger = { version = "^0.25", features = ["colors"] }
itertools = "0.11"
lazy_static = "^1.5"
log = "^0.4"
quit = "^2.0"
rand = "^0.8"
shellexpand = { version = "3.1.0", features = ["full"] }
shlex = "1.3.0"
thiserror = "^1.0"
tmux_interface = { version = "^0.3.2", features = ["tmux_2_8", "cmd_alias"], default-features = false }
tracing = { version = "0.1.37", features = ["attributes"], default-features = false }
tracing-subscriber = { features = ["fmt", "ansi", "tracing-log", "chrono", "smallvec"], default-features = false, version = "0.3.18" }

[workspace]

[dev-dependencies]
regex = "1.10"
