[package]
name = "tm"
description = "tmux helper"
version = "0.9.2"
edition = "2021"
authors = ["Jörg Jaspert <joerg@ganneff.de>"]
license = "BSD-2-Clause"
keywords = [ "tmux", "shell", "helper", "terminal" ]
categories = [ "command-line-utilities" ]
repository = "https://github.com/Ganneff/tm"

[dependencies]
anyhow = "^1.0"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "^2"
directories = "^5.0"
fehler = "1.0.0"
itertools = "0.11"
log = "^0.4"
rand = "^0.8"
shellexpand = { version = "3.1.0", features = ["full"] }
shlex = "1.3.0"
tmux_interface = { version = "^0.3" }
tracing = { version = "0.1.40", features = ["attributes"], default-features = false }
tracing-subscriber = { features = ["ansi", "tracing-log", "chrono"], default-features = false, version = "0.3.18" }

[workspace]

[dev-dependencies]
regex = "1.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
